feat: css part of w3schools page

--- a/w3schools.html
+++ b/w3schools.html
@@ -35,7 +35,7 @@
         </ul>
     </div>
   </header>
-  <div class="main_container">
+  <div class="html_container">
     <section class="left">
       <h1 class="heading">HTML</h1>
       <p class="desc">The language for building web pages</p>
@@ -53,6 +53,28 @@
           <span><span>&lt;</span>p<span>&gt;</span></span>This is a paragraph.<span ><span>&lt;</span>/p<span>&gt;</span></span><br><br>
           <span><span>&lt;</span>/body<span>&gt;</span></span><br>
           <span><span>&lt;</span>/html<span>&gt;</span></span>
+        </div>
+        <p class="btn">Try it Yourself</p>
+      </div>
+    </section>
+  </div>
+  <div class="css_container">
+    <section class="left">
+      <h1 class="heading">CSS</h1>
+      <p class="desc">The language for styling web pages</p>
+      <p class="btn1">Learn CSS</p>
+      <p class="btn2">CSS Reference</p>
+      <p class="btn3">Get Certified</p>
+    </section>
+    <section class="right">
+      <div class="sub_section">
+        <h1 class="heading">HTML Example:</h1>
+        <div class="code w3-code cssHigh notranslate green-border"><span class="cssselectorcolor" style="color:brown">
+          body <span class="cssdelimitercolor" style="color:black">{</span><span class="csspropertycolor" style="color:red"><br>
+          &nbsp; background-color<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> lightblue<span class="cssdelimitercolor" style="color:black">;</span></span><br></span><span class="cssdelimitercolor" style="color:black">}</span><br><br>
+          h1 <span class="cssdelimitercolor" style="color:black">{</span><span class="csspropertycolor" style="color:red"><br>
+          &nbsp; color<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> white<span class="cssdelimitercolor" style="color:black">;</span></span><br>
+          &nbsp; text-align<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> center<span class="cssdelimitercolor" style="color:black">;</span></span><br></span><span class="cssdelimitercolor" style="color:black">}</span><br><br>p <span class="cssdelimitercolor" style="color:black">{</span><span class="csspropertycolor" style="color:red"><br>&nbsp; font-family<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> verdana<span class="cssdelimitercolor" style="color:black">;</span></span><br></span><span class="cssdelimitercolor" style="color:black">}</span> </span>
         </div>
         <p class="btn">Try it Yourself</p>
       </div>
