--- a/home.html
+++ b/home.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>first-mini-project</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <title>Home</title>
+  <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
+  <ul class="nav_link">
+    <li><a href="./website.html">وب سایت من</a></li>
+    <li><a href="./w3schools.html">وب سایت W3Schools</a></li>
+    <li><a href="./Card.html">کارت شناسایی</a></li>
+    <li><a href="./navigation.html">پروژه مینو بار</a></li>
+    <li><a href="./position.html">پروژه پوزیشن ها</a></li>
+  </ul>
   <div class="container">
-    <img class="my_photo" src="./images/photo.jpg" alt="my photo">
-    <p class="my_name">Hassan Nazari</p>
-    <p class="info">Please follow me on social media</p>
-    <div class="media_container">
-      <img src="images/instagram.png" alt="instagram logo">
-      <img src="images/youtube.png" alt="youtube logo">
-      <img src="images/facebook.png" alt="facebook logo">
-    </div>
+    <h1>خوش آمدید!</h1>
+    <h3>برای دیدن پروژه های بیشتر بالای لینک مورد نظر کلیک کنید.</h3>
   </div>
 </body>
 </html>
